Abrindo link em nova aba

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
     <h2 class="titulo">Link Netflix</h2><!-- Titulo do Link -->
-    <a id="netflix" href="https://www.netflix.com/br/">Netflix</a><!-- Link Netflix com estilização Hover-->
+    <a id="netflix" target="_blank" href="https://www.netflix.com/br/">Netflix</a><!-- Link Netflix com estilização Hover-->
     
     <br><br><br><!-- pular 3 linhas no final da pagina -->
 
